fix img alignment in main content section

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -344,6 +344,8 @@ a:last-of-type.btn:hover {
   margin-top: 0; }
 .main-content img {
   max-width: 100%;
+  margin: 0 auto;
+  display: block;
 }
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
   /*margin-top: 2rem;*/
